// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "cloud.altemista.smartpark.";
option java_outer_classname = "SmartParkProto";

package smartpark;

service SmartParkProto {
    rpc SendParkingLotEvent (ParkingLotEvent) returns (Ack) {}
    rpc SendLicensePlateEvent (LicensePlateEvent) returns (Ack) {}
}

message ParkingLotEvent {
    int32 parking_lot_id = 1;
    string plate = 2;
}

message LicensePlateEvent {
    Direction direction = 1;
    string plate = 2;

    enum Direction {
        ENTRY = 0;
        EXIT = 1;
    }
}

message Ack {
}